Revert "TRUNK-3804 - Merge Patients ignores visits (also, increase memory when running unit tests)"
This reverts commit 4b018f7577e7c680504482f475fdfebd423e30fe. (which accidentally changes line endings)