@@ -363,7 +363,7 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
-			<dependency>
+			<dependency> 
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-ehcache</artifactId>
 				<version>3.6.0.Final</version>
@@ -650,11 +650,6 @@
 				<version>1.4.10</version>
 			</dependency>
 			<dependency>
-                <groupId>org.hamcrest</groupId>
-                <artifactId>hamcrest-all</artifactId>
-                <version>1.3</version>
-            </dependency>
-			<dependency>
 				<groupId>org.databene</groupId>
 				<artifactId>databene-benerator</artifactId>
 				<version>0.5.9</version>
@@ -938,7 +933,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.5</version>
 				<configuration>
-					<argLine>-Duser.language=en -Duser.region=US -Xmx512m -XX:MaxPermSize=512m ${customArgLineForTesting}</argLine>
+					<argLine>-Duser.language=en -Duser.region=US ${customArgLineForTesting}</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
